[package]
name = "rust-toc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.0"
colored = "2.0.0"

[dependencies.lazy_static]
git = "https://github.com/Kimundi/lazy-static.rs"